 * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)
 * New parametrization in Beta: shape(alpha), shape(beta), location(a), location(b) (beta=t-r for second argument)
 * New parametrization in InverseGamma: rate(lambda), shape(k) (swapped arguments)

==== Major changes ====
 * Add dlib solvers
 * FittingTest methods to return fitted distributions with factory as argument

==== New classes ====
 * Dlib
 * SquaredNormal
 * NullHessian
 * GumbelLambdaGamma
 * LogNormalMuErrorFactor
 * WeibullMax
 * WeibullMaxFactory
 * WeibullMaxMuSigma
 * GeneralizedExtremeValueFactory

==== API changes ====
 * Removed deprecated specific RandomVector constructors
 * Removed deprecated HypothesisTest::Smirnov
 * Removed deprecated FittingTest::TwoSamplesKolmogorov
 * Removed deprecated LinearModel, LinearModelFactory
 * Removed deprecated HypothesisTest::(Partial|Full)Regression
 * Removed deprecated OptimizationProblem(levelFunction, levelValue) ctor
 * Removed deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 * Removed deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
 * Moved dot to Point::dot
 * Deprecated Weibull in favor of WeibullMin
 * Deprecated WeibullMuSigma in favor of WeibullMinMuSigma
 * Deprecated WeibullFactory in favor of WeibullMinFactory, buildAsWeibull
 * Deprecated GumbelAB

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1
 * #1006 (Text drawable does not handle size)
 * #1130 (Inconsistency in FittingTest)


== 1.13 release (2019-06-06) == #release-1.13

=== Library ===

==== Major changes ====
 * Added OPT++ solvers
 * Improved a lot the performace of all the Rosenblatt related computations
 * Added elementary calibration capabilities
 * Added CMinpack, Ceres Solver least-squares solvers
 * Add dlib solvers

==== New classes ====
 * ParametricPointToFieldFunction