@@ -9,6 +9,7 @@
  * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)
  * New parametrization in Beta: shape(alpha), shape(beta), location(a), location(b) (beta=t-r for second argument)
  * New parametrization in InverseGamma: rate(lambda), shape(k) (swapped arguments)
+ => One can use "import openturns.shims as ot" to maintain compatibility with older scripts
 
 ==== Major changes ====
  * Add dlib solvers
